# rekordbox-meta-data-enrichment

./: .env.example  .gitignore  AGENTS.md  CASE_STUDY.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/enricher/: __main__.py  cache.py  disambiguator.py  enricher.py  lookup.py  models.py  reader.py  reporter.py  scorer.py  writer.py
tests/: conftest.py  test_cache.py  test_disambiguator.py  test_enricher.py  test_lookup.py  test_reader.py  test_reporter.py  test_scorer.py  test_writer.py
