[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rekordbox-enricher"
version = "0.5.0"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "lxml",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "respx",
    "lxml-stubs",
]

[project.scripts]
enricher = "enricher.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
exclude = ["build/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
